--- a/Project 3.Rmd
+++ b/Project 3.Rmd
@@ -7,6 +7,10 @@ output: html_notebook
 ```{r importing sql data}
 library(RMySQL)
 
-conn = dbConnect(MySQL(), user='admin', dbname='MsdsProject3', host='project3.c4h7w2meulft.us-east-1.rds.amazonaws.com', port=3306)
+conn = dbConnect(MySQL(), user='admin', pass='#MsdsProject3', dbname='project3db', host='project3.c4h7w2meulft.us-east-1.rds.amazonaws.com', port=3306)
+```
+
+```{r}
+dbListTables(conn)
 ```
 
