Small changes to to markdown file.

--- a/Project 3.Rmd
+++ b/Project 3.Rmd
@@ -1,23 +1,25 @@
 ---
 title: "CUNY SPS 607 Project 3"
-output: html_notebook
+output: html_document
 ---
 
-```{r setup}
+```{r setup, message = F}
 library(RMySQL)
 library(tidyverse)
 library(reactable)
 ```
 
-## Introduction
+# Introduction
 
 The data source we will be using is a [2020 survey from Kaggle](https://www.kaggle.com/c/kaggle-survey-2020) which surveyed Data Scientist. The questions in the survey asked about which languages, tools, and skills that Data Scientist use daily. The data is a csv file with 355 columns and 20,000 rows and will need to be cleaning up before it is uploaded into a normalized database. With the dataset we will looking at the answers and seeing what answers come up frequently as those are the skills and tools that are the valuable skills that data scientists have.
 
 In the survey 39 questions were asked. Many of the survey questions are relevant to answering, "What is the most valued data science skills." The survey also included sub questions which was labeled using the question number and a letter. The data set also includes branching questions where if a question if a specific question is answered then an alternative question is asked. The dataset is a very long and sparse data set which will require a lot of cleaning before any data analysis can be done.
 
-![ERD Diagram](ERD.png)
+![ERD Diagram](https://raw.githubusercontent.com/xvicxpx/CUNY-SPS-Data-607-Project-3/main/ERD.png)
 
 In order to normalize the database, we created a relational database using tables with primary keys. This allows the database to be organized and joined in many ways. The database tables are split into questions, answers, and user responses and are all joined using index and primary keys. All the information is uploaded into Amazon Web Services allowing multiple people to be querying the dataset at the same time.
+
+# Connecting and Importing data to SQL {.tabset}
 
 ## Opening Connection to SQL Server
 
@@ -53,6 +55,6 @@ Please find the head of the raw data.
 reactable(head(rawDataGitHub,20))
 ```
 
-## Tidying Data
-
 ## Insert into SQL
+
+# Tidying Data
