--- a/Project 3.Rmd
+++ b/Project 3.Rmd
@@ -73,14 +73,14 @@ clean_data = tibble::rowid_to_column(clean_data, "id")
 In the unpivoting we will also be cleaning up all the sub questions. The sub questions allows for the respondent to have more than one answer. Instead of treating sub questions as individuals questions we will be combining them together to give us more data and also allow for easier analysis.
 
 ```{r unpivoting of data}
-clean_data = clean_data %>%
+clean_data <- clean_data %>%
   pivot_longer(!id, names_to='Question', values_to='Response') %>%
   mutate(Question = str_extract(Question, 'Q\\d*'))
 ```
 
 Because we fixed the sub questions it created a lot of empty responses. We will be filtering out any empty responses as it is wasted space.
 ```{r filtering out unanswered questions}
-clean_data = clean_data %>%
+clean_data <- clean_data %>%
   filter(!is.nan(Response))
 ```
 
