added a couple of analysis

--- a/Project 3.Rmd
+++ b/Project 3.Rmd
@@ -8,6 +8,7 @@ library(RMySQL)
 library(tidyverse)
 library(reactable)
 library(stringr)
+library(ggplot2)
 ```
 
 # Introduction
@@ -59,7 +60,7 @@ reactable(head(rawDataGitHub,20))
 =======
 ## Tidying Data
 
-First we will need to add a column to identify each participant. This will just be a simple incrementing number id which will allow us to keep track of users responses once the data has been unpivoted using the pivot_long function. We will also be needing to remove the first row as the first row includes the question being asked.
+This will just be a simple incrementing number id which will allow us to keep track of users responses once the data has been unpivoted using the pivot_long function. We will also be needing to remove the first row as the first row includes the question being asked.
 
 ```{r Cleaning of Data}
 clean_data <- rawDataGitHub[ -1,]
@@ -86,6 +87,44 @@ clean_data <- clean_data %>%
 ```
 
 
-## Insert into SQL
+# Analysis
 
-# Tidying Data
+As we know the title of Data Scientist is a very vague title which has many different job functions. This title may sometimes be used interchangable between Data Analyst, Business Analyst, and Data Engineer. We would like to look specifically what skills make a Data Scientist
+
+## Analysis 1
+
+In the survey it asked Data Scientist "what programming language do you use on a daily basis," and "what programming language would you recommend an aspiring data scientist to learn." We will be looking at the responses and seeing what are the top programming languages data scientist should learn.
+
+```{r}
+program_lang <- clean_data %>%
+  filter(Question == 'Q7' | Question == 'Q8') %>%
+  group_by(Response) %>%
+  tally() %>%
+  arrange(desc(n))
+```
+
+```{r}
+program_lang %>%
+  ggplot(aes(reorder(Response, n, sum), n)) + geom_bar(stat='identity') + coord_flip() + xlab('Programming Language') + ylab('Count of Response')
+```
+
+We can see that Python is what Data Scientist would recommend by a long margin following by R. One interesting thing to look at is the trend overtime and if python is becoming the default standard in Data Science
+
+## Analysis 2
+
+Another skill that is used a lot by Data Scientist is management and querying of relational databases. It is important to be able to quickly and efficiently get the data that is stored in the server for models and analysis
+
+```{r}
+data_base <- clean_data %>%
+  filter(Question == 'Q29-A' | Question == 'Q30') %>%
+  group_by(Response) %>%
+  tally() %>%
+  arrange(desc(n))
+```
+
+```{r}
+data_base %>%
+  ggplot(aes(reorder(Response, n, sum), n)) + geom_bar(stat='identity') + coord_flip() + xlab('Relational Database') + ylab('Count of Response')
+```
+
+We can see that MySQL is the post popular followed by Postgres and Microsoft SQL. While a lot of SQL is very similar to one another they all have their own variations and functions which can make it difficult if someone is looking to switch to another SQL variant.
