--- a/Project 3.Rmd
+++ b/Project 3.Rmd
@@ -9,6 +9,8 @@ library(tidyverse)
 library(reactable)
 library(stringr)
 library(ggplot2)
+library(fuzzyjoin)
+library(stringr)
 ```
 
 # Introduction
@@ -69,7 +71,7 @@ clean_data <- clean_data %>%
   mutate(id = rownames(clean_data)) %>% 
   select(id, everything() )
 
-reactable(head(clean_data) )
+reactable(head(clean_data,20) )
 ```
 
 
@@ -83,10 +85,51 @@ clean_data <- clean_data %>%
 Because we fixed the sub questions it created a lot of empty responses. We will be filtering out any empty responses as it is wasted space.
 ```{r filtering out unanswered questions}
 clean_data <- clean_data %>%
-  drop_na(Response)
+  drop_na(Response) %>% 
+  mutate_all (str_trim)
 ```
 
+=======
+## Export data to MySQL
 
+The questions have been pre-populated, as well as the questions for the multiple choice. These have been placed into two tables `SurveyQuestions` and `SurveyMltQuestionAnswers`.
+
+I will use the tidied data to import the information into the `SurveyResponse` table. 
+
+```{r get-question-id-from-db}
+surveyQuestionsTable <- dbReadTable(conn,"SurveyQuestions")
+questionsFromRawData <- as.data.frame(t(as.matrix(rawDataGitHub[1,]) )) %>% 
+  rownames_to_column("Question") %>% 
+  rename ("QuestionText" = V1) 
+
+questionsFromRawData <- questionsFromRawData %>% 
+  mutate (QuestionText = str_replace(QuestionText, ': - Selected Choice','') ) %>% 
+  mutate (QuestionText = str_replace(QuestionText, ' - Selected Choice','') ) %>% 
+  separate(QuestionText,c('QuestionText', 'garbage'), sep = "\\(Select all that apply\\)", fill="right" ) %>%
+  select( -garbage ) %>% 
+  separate(QuestionText,c('QuestionText', 'garbage'), sep = "-", fill="right" ) %>%
+  select( -garbage ) %>% 
+  mutate_all (str_trim)
+
+match <- function ( x,y) {
+  x <- str_extract (x,"([[:alpha:]]|[[:space:]]|[[:digit:]])*")
+  y <- str_extract (y,"([[:alpha:]]|[[:space:]]|[[:digit:]])*")
+  return ( str_detect(x,y) | str_detect(y,x) )
+}
+
+dbQuestionRawDataMap <- fuzzy_join(surveyQuestionsTable,questionsFromRawData, by=c("QuestionText","QuestionText") , match_fun = match ) %>% 
+ select ( QuestionId, Question, QuestionType)
+```
+
+Please note, we now have a way to match the questions from the raw data with the questions in the database. This has been saved in the data table `dbQuestionRawDataMap`, this was achieved using a fuzzy join on the question text. 
+```{r display-question-map}
+reactable (dbQuestionRawDataMap)
+```
+
+In order to update the `SurveyMltQuestionAnswers` table we will need to obtain the Response ID for the multiple choice questions. These responses have been stored in the `SurveyQuestions` table. I will filter the responses from the CSV into two data frames, one which contains free response questions and another with the 
+```{r get-response-id}
+
+```
 # Analysis
 
 As we know the title of Data Scientist is a very vague title which has many different job functions. This title may sometimes be used interchangable between Data Analyst, Business Analyst, and Data Engineer. We would like to look specifically what skills make a Data Scientist
